Small fixes (#19)
* fix: Overflowing UI on small height screens

* fix: Settings tab height

* Warning when loading and stop from exiting settings

* fix: Don't load settings tab until required

--- a/src/components/SettingsTab/SettingsTab.module.scss
+++ b/src/components/SettingsTab/SettingsTab.module.scss
@@ -5,7 +5,8 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 100vh;
+  height: 100vh; // Fallback
+  height: calc(var(--vsr-vh, 1vh) * 100);
 
   display: grid;
   grid-template-rows:
@@ -93,12 +94,20 @@
     }
   }
 
-  &--warning {
+  &--error, &--warning {
     margin-top: $spacer;
     margin-bottom: $spacer;
     padding-top: $spacer;
     padding-bottom: $spacer;
-    border-top: 3px solid red;
-    border-bottom: 3px solid red;
+    border-top: 3px solid;
+    border-bottom: 3px solid;
+  }
+
+  &--error {
+    border-color: red;
+  }
+
+  &--warning {
+    border-color: gold;
   }
 }
